compiler/tools/fpp-check/test/type/string_missing_default_size_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/type/string_missing_default_size_constant.fpp:3.10
type s = string
         ^
error: symbol FW_FIXED_LENGTH_STRING_SIZE is not defined
note: looking for a constant here
note: use of a string type with default size requires this definition
